[project]
name = "leet-code"
version = "0.0.1"
description = "This project is a collection of solutions to the LeetCode problems. It is a work in progress and is not yet complete."
authors = [{ name = "Tim Herrin", email = "teffluvium@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.9,<4.0"

[project.urls]
Homepage = "https://teffluvium.github.io/leet-code/"
Repository = "https://github.com/teffluvium/leet-code"
Documentation = "https://teffluvium.github.io/leet-code/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",

    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
]

# Add script to run the program
[project.scripts]
leet-code = "leet_code.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT", # flake8-2020
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
    "SIM", # flake8-simplify
    "I",   # isort
    "C90", # mccabe
    "E",   # pycodestyle
    "W",
    "F",   # pyflakes
    "PGH", # pygrep-hooks
    "UP",  # pyupgrade
    "RUF", # ruff
    "TRY", # tryceratops
]
ignore = [
    "E501",   # LineTooLong
    "E731",   # DoNotAssignLambda
    "TRY003", # TryExceptPass
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true
exclude_also = [
    "tests/*",
    "src/leet_code/__main__.py",
    "src/leet_code/__init__.py",
]


[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*", "src/leet_code/__main__.py", "src/leet_code/__init__.py"]
