[project]
name = "leet-code"
version = "0.0.1"
description = "This project is a collection of solutions to the LeetCode problems. It is a work in progress and is not yet complete."
authors = [{ name = "Tim Herrin", email = "teffluvium@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.9,<4.0"

[project.urls]
Homepage = "https://teffluvium.github.io/leet-code/"
Repository = "https://github.com/teffluvium/leet-code"
Documentation = "https://teffluvium.github.io/leet-code/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",

    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
]

# Add script to run the program
[project.scripts]
leet-code = "leet_code.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
extend-select = [
    "E",   # Pycodestyle errors (style issues)
    "W",   # Pycodestyle warnings (style issues)
    "C90", # McCabe – complexity metric for functions
    "I",   # isort – import ordering checks
    "N",   # PEP8 Naming – naming conventions
    "D",   # Pydocstyle – docstring formatting
    "UP",  # Pyupgrade – upgrades syntax to newer Python versions
    "YTT", # Flake8-2020 – checks for Python 2020 best practices
    # "ANN",  # Flake8-annotations – enforces type annotation style
    "ASYNC", # Flake8-async – checks async/await usage
    "S",     # Flake8-bandit – security issues
    "BLE",   # Flake8-blind-except – flags bare excepts
    "FBT",   # Flake8-boolean-trap – potential pitfalls with booleans
    "B",     # Flake8-bugbear – common bug patterns
    "A",     # Flake8-builtins – misuse of Python built-in names
    "COM",   # Flake8-commas – trailing/comma issues
    # "CPY",  # Flake8-copyright – copyright header checks
    "C4",  # Flake8-comprehensions – best practices in comprehensions
    "DTZ", # Flake8-datetimez – requires timezone-aware datetime objects
    "T10", # Flake8-debugger – debugger statements (e.g. pdb)
    "DJ",  # Flake8-django – Django-specific conventions
    "EM",  # Flake8-errmsg – error message style
    "EXE", # Flake8-executable – executable file checks
    "FA",  # Flake8-future-annotations – future import for annotations
    "ISC", # Flake8-implicit-str-concat – warns on implicit string concatenation
    "ICN", # Flake8-import-conventions – enforces conventional import aliases
    "LOG", # Flake8-logging – proper logging usage
    "G",   # Flake8-logging-format – logging format string issues
    "INP", # Flake8-no-pep420 – warns against non-PEP420 namespace usage
    "PIE", # Flake8-pie – Python improvement suggestions
    # "T20",  # Flake8-print – disallows print statements
    "PYI",  # Flake8-pyi – checks for type stub (.pyi) consistency
    "PT",   # Flake8-pytest-style – pytest best practices
    "Q",    # Flake8-quotes – enforces quote style consistency
    "RSE",  # Flake8-raise – proper raise statement usage
    "RET",  # Flake8-return – return statement issues
    "SLF",  # Flake8-self – flags instance methods that don't use self
    "SLOT", # Flake8-slots – suggests use of __slots__ where appropriate
    "SIM",  # Flake8-simplify – code simplification hints
    "TID",  # Flake8-tidy-imports – enforces specific import styles (e.g., no relative imports)
    "TC",   # Flake8-type-checking – proper import of typing in type checks
    "INT",  # Flake8-gettext – checks for proper internationalization usage
    "ARG",  # Flake8-unused-arguments – flags unused function arguments
    "PTH",  # Flake8-use-pathlib – encourages pathlib over os.path
    "TD",   # Flake8-todos – flags TODO comments
    "FIX",  # Flake8-fixme – flags FIXME comments
    # "ERA",  # Eradicate – detects commented-out code (potentially dangerous)
    "PD",   # Pandas-vet – checks pandas-specific code practices
    "PGH",  # Pygrep-hooks – custom grep hooks for linting
    "PL",   # Pylint – integration with Pylint conventions
    "TRY",  # Tryceratops – try/except usage suggestions
    "FLY",  # Flynt – f-string conversion suggestions
    "NPY",  # NumPy-specific rules – ensures NumPy coding standards
    "FAST", # FastAPI – FastAPI-specific linting rules
    "AIR",  # Airflow – Airflow-specific linting rules
    "PERF", # Perflint – performance-related checks
    "FURB", # Refurb – rules for code refurbishment
    # "DOC",  # Pydoclint – docstring linting and consistency
    "RUF", # Ruff-specific rules – additional Ruff checks
]

ignore = [
    "E501",    # Pycodestyle - line too long
    "D1",      # Pydocstyle - missing docstring in public module, class, or function
    "FBT003",  # Flake8-boolean-trap - boolean position value in function call
    "D203",    # Pydocstyle - one blank line required before class docstring
    "D212",    # Pydocstyle - summary line should be immediately after the opening quotes.
    "D401",    # Pydocstyle - Checks for docstring first lines that are not in an imperative mood.
    "S311",    # Flake8-bandit - Standard pseudo-random generators are not suitable for security/cryptographic purposes
    "PERF401", # Perflint - Checks for for loops that can be replaced by a list comprehension.
    "RET504",  # Flake8-return - Checks for variable assignments that immediately precede a return of the assigned variable.
    "FA102",   # Flake8-future-annotations - Missing `from __future__ import annotations`, but uses PEP 604 union
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # Skip checks for uses of the assert keyword.
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true
exclude_also = [
    "tests/*",
    "src/leet_code/__main__.py",
    "src/leet_code/__init__.py",
]


[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*", "src/leet_code/__main__.py", "src/leet_code/__init__.py"]
